# azimuth-apps-operator

./: .grype.yaml  .stestr.conf  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-aiohappyeyeballs-2-4-6.4.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-aiohttp-3-11-12.11.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-aiohttp-3-11-12.4.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-aiohttp-3-11-13.15.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-certifi-2025-1-31.4.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-propcache-0-3-0.15.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-2-10-6.2.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-2-10-6.3.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-core-2-28-0.3.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-core-2-29-0.3.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-core-2-29-0.4.tgz  azimuth-apps-operator-0.1.0-dev.0.dependabot-pip-pydantic-core-2-30-0.15.tgz  azimuth-apps-operator-0.1.0-dev.0.main.1.tgz  azimuth-apps-operator-0.1.0-dev.0.main.10.tgz  azimuth-apps-operator-0.1.0-dev.0.main.11.tgz  azimuth-apps-operator-0.1.0-dev.0.main.13.tgz  azimuth-apps-operator-0.1.0-dev.0.main.14.tgz  azimuth-apps-operator-0.1.0-dev.0.main.15.tgz  azimuth-apps-operator-0.1.0-dev.0.main.2.tgz  azimuth-apps-operator-0.1.0-dev.0.main.3.tgz  azimuth-apps-operator-0.1.0-dev.0.main.4.tgz  azimuth-apps-operator-0.1.0-dev.0.update-dependency-helm.12.tgz  azimuth-apps-operator-0.1.0.tgz  (+166 more)
(+30 files in other folders)
