[metadata]
name = azimuth-apps-operator
version = 0.1.0
description = Kubernetes operator for installing apps on Kubernetes clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/azimuth-apps-operator


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    easysemver
    httpx
    jinja2
    kopf
    kube-custom-resource
    pydantic
    pyhelm3
    pyyaml
